# compliance-support-copilot

./: .dockerignore  .env.example  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: backend-ci.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/routes/: chat.py  health_check.py
backend/app/core/: config.py
backend/app/llm/: ollama.py
backend/tests/: test_chat.py  test_health_check.py
data/raw/: customer_support_faq.md  refund_policy.md  support_escalation_sop.md
docs/: product_spec.md
frontend/: Dockerfile  app.py
